<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".ui.favorite.FavoriteActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:tabIndicatorColor="@color/black"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerFav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>